--- a/API/appsettings.json
+++ b/API/appsettings.json
@@ -1,7 +1,7 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
+      "Default": "Informatio2n",
       "Microsoft.AspNetCore": "Information"
     }
   },
