--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,11 +1,12 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Data source=datingapp.db"
-  },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+    "ConnectionStrings": {
+        "DefaultConnection": "Data source=datingapp.db"
+    },
+    "TokenKey": "1230498mjf2jc908re-01931=-41-29304-d1=-.=231234223124efc21xj192UJOJn12",
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
     }
-  }
 }
