--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
     "bootstrap": "^5.1.3",
+    "bootswatch": "^5.3.0",
     "font-awesome": "^4.7.0",
     "jest-editor-support": "*",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-toastr": "^15.2.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
