--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "font-awesome": "^4.7.0",
     "jest-editor-support": "*",
     "ngx-bootstrap": "^10.2.0",
+    "ngx-gallery": "^5.10.0",
     "ngx-toastr": "^15.2.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
