--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^15.2.9",
+    "@angular/cdk": "^15.2.9",
     "@angular/common": "^15.2.9",
     "@angular/compiler": "^15.2.9",
     "@angular/core": "^15.2.9",
@@ -24,6 +25,7 @@
     "jest-editor-support": "*",
     "ngx-bootstrap": "^10.2.0",
     "ngx-gallery": "^5.10.0",
+    "ngx-spinner": "^16.0.2",
     "ngx-toastr": "^15.2.2",
     "rxjs": "^7.8.1",
     "tslib": "^2.3.0",
