--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser": "^15.2.9",
     "@angular/platform-browser-dynamic": "^15.2.9",
     "@angular/router": "^15.2.9",
+    "@microsoft/signalr": "^7.0.9",
     "bootstrap": "^5.1.3",
     "bootswatch": "^5.3.0",
     "font-awesome": "^4.7.0",
