switch to postgresql

--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Data source=datingapp.db"
+        "DefaultConnection": "Server=localhost; Port=5432; User Id=appuser; Password=Papostgres:latestsw0rd; Database=ASP.NET_Angular"
     },
     "TokenKey": "1230498mjf2jc908re-01931=-41-29304-d1=-.=231234223124efc21xj192UJOJn12",
     "Logging": {
